feat(GEN-013): create an academic profile